Call functions passed as parameters